Add assignments for operator and second input number

--- a/index.html
+++ b/index.html
@@ -12,31 +12,31 @@
         <div id = 'button-container'>
             <div>
                 <button id = 'clear'>clear</button>
-                <button>/</button>
+                <button class = 'operator'>/</button>
             </div>
             <div>
                 <button class = 'input'>7</button>
                 <button class = 'input'>8</button>
                 <button class = 'input'>9</button>
-                <button>X</button>
+                <button class = 'operator'>x</button>
             </div>
             <div>
                 <button class = 'input'>4</button>
                 <button class = 'input'>5</button>
                 <button class = 'input'>6</button>
-                <button>-</button>
+                <button class = 'operator'>-</button>
             </div>
             <div>
                 <button class = 'input'>1</button>
                 <button class = 'input'>2</button>
                 <button class = 'input'>3</button>
-                <button>+</button>
+                <button class = 'operator'>+</button>
             </div>
             <div>
                 <button>+/-</button>
                 <button class = 'input'>0</button>
                 <button class = 'input'>.</button>
-                <button>=</button>
+                <button id = 'equalSign'>=</button>
             </div>
         </div>
     </div>
