--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <button>+/-</button>
                 <button class = 'input'>0</button>
                 <button class = 'input'>.</button>
-                <button id = 'equalSign'>=</button>
+                <button id = 'equals'>=</button>
             </div>
         </div>
     </div>
