Add decimal functionality and can enter new number after calc run

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <div>
                 <button>+/-</button>
                 <button class = 'input'>0</button>
-                <button class = 'input'>.</button>
+                <button id = 'decimal'>.</button>
                 <button id = 'equals'>=</button>
             </div>
         </div>
