Add negative toggle functionality and button colors

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script src='calculator-functions.js' defer></script> 
+    <link rel="stylesheet" href="./calculator-styles.css">
 </head>
 <body>
     <div> 
@@ -12,6 +13,7 @@
         <div id = 'button-container'>
             <div>
                 <button id = 'clear'>clear</button>
+                <button id = 'backspace'>back</button>
                 <button class = 'operator'>/</button>
             </div>
             <div>
@@ -33,7 +35,7 @@
                 <button class = 'operator'>+</button>
             </div>
             <div>
-                <button>+/-</button>
+                <button id = 'negative'>+/-</button>
                 <button class = 'input'>0</button>
                 <button id = 'decimal'>.</button>
                 <button id = 'equals'>=</button>
